force-app/main/default/objects/IPT_Reason__mdt/IPT_Reason__mdt.object-meta.xml
<CustomObject>
    <description>Contains optionally the reason for the status of a payment transaction (International Payments Tracker)</description>
    <label>IPT_Reason</label>
    <pluralLabel>IPT_Reasons</pluralLabel>
</CustomObject>