force-app/main/default/objects/IPT_Reason__mdt/fields/REA_PCK_CodeName__c.field-meta.xml
<CustomField>
    <fullName>REA_PCK_CodeName__c</fullName>
    <label>REA_PCK_CodeName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G002</fullName>
                <default>true</default>
                <label>G002</label>
            </value>
            <value>
                <fullName>G004</fullName>
            </value>
            <value>
                <fullName>G000</fullName>
            </value>
            <value>
                <fullName>G001</fullName>
            </value>
            <value>
                <fullName>G003</fullName>
            </value>
            <value>
                <fullName>AM06</fullName>
            </value>
            <value>
                <fullName>RC01</fullName>
            </value>
            <value>
                <fullName>AC06</fullName>
            </value>
            <value>
                <fullName>AC04</fullName>
            </value>
            <value>
                <fullName>DUPL</fullName>
            </value>
            <value>
                <fullName>FOCR</fullName>
            </value>
            <value>
                <fullName>BE01</fullName>
            </value>
            <value>
                <fullName>AC01</fullName>
            </value>
            <value>
                <fullName>RC08</fullName>
            </value>
            <value>
                <fullName>FF07</fullName>
            </value>
            <value>
                <fullName>NOAS</fullName>
            </value>
            <value>
                <fullName>RR03</fullName>
            </value>
            <value>
                <fullName>MS03</fullName>
            </value>
            <value>
                <fullName>RR05</fullName>
            </value>
            <value>
                <fullName>CUST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>