force-app/main/default/objects/IPT_Reason__mdt/fields/REA_TXT_Definition__c.field-meta.xml
<CustomField>
    <fullName>REA_TXT_Definition__c</fullName>
    <label>REA_TXT_Definition</label>
    <type>TextArea</type>
</CustomField>