force-app/main/default/objects/IPT_Reason__mdt/fields/REA_TXT_Name__c.field-meta.xml
<CustomField>
    <fullName>REA_TXT_Name__c</fullName>
    <label>REA_TXT_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>